--- a/common/fonts/test/fonts-setup.test.html
+++ b/common/fonts/test/fonts-setup.test.html
@@ -4,9 +4,9 @@
 <head>
 	<title>Vivid - injectable isolated document as testing playground</title>
 	<script type="module">
-		import vvdFonts from '../vvd-fonts.js';
+		import { init } from '../vvd-fonts.js';
 
-		window.vvdFonts = vvdFonts;
+		window.vvdFonts = { init };
 	</script>
 </head>
 
