support outlined in badge

--- a/index.html
+++ b/index.html
@@ -14,20 +14,24 @@
 		</dt>
 			<dd>
 				<vwc-chip text="unselected" filter></vwc-chip>
-				<vwc-chip text="unselected" layout="outlined" filter connotation="cta"></vwc-chip>
-				<vwc-chip text="unselected" layout="soft" filter connotation="cta"></vwc-chip>
-				<vwc-chip text="unselected" layout="filled" filter></vwc-chip>
-				<vwc-chip text="unselected" layout="filled" filter connotation="cta"></vwc-chip>
+				<vwc-chip text="unselected" filter layout="outlined-duotone"></vwc-chip>
+				<vwc-chip text="unselected" filter layout="outlined-duotone" connotation="cta"></vwc-chip>
+				<vwc-chip text="unselected" filter layout="soft"></vwc-chip>
+				<vwc-chip text="unselected" filter layout="soft" connotation="cta"></vwc-chip>
+				<vwc-chip text="unselected" filter layout="wrong_value"></vwc-chip>
+				<vwc-chip text="unselected" filter layout="wrong_value" connotation="cta"></vwc-chip>
 			</dd>
 		<dt>
 			selected
 		</dt>
 			<dd>
-				<vwc-chip text="selected" filter selected></vwc-chip>
-				<vwc-chip text="selected" layout="outlined" filter selected connotation="cta"></vwc-chip>
-				<vwc-chip text="selected" layout="soft" filter selected connotation="cta"></vwc-chip>
-				<vwc-chip text="selected" layout="filled" filter selected></vwc-chip>
-				<vwc-chip text="selected" layout="filled" filter selected connotation="cta"></vwc-chip>
+				<vwc-chip text="selected" selected filter></vwc-chip>
+				<vwc-chip text="selected" selected filter layout="outlined-duotone"></vwc-chip>
+				<vwc-chip text="selected" selected filter layout="outlined-duotone" connotation="cta"></vwc-chip>
+				<vwc-chip text="selected" selected filter layout="soft"></vwc-chip>
+				<vwc-chip text="selected" selected filter layout="soft" connotation="cta"></vwc-chip>
+				<vwc-chip text="selected" selected filter layout="wrong_value"></vwc-chip>
+				<vwc-chip text="selected" selected filter layout="wrong_value" connotation="cta"></vwc-chip>
 			</dd>
 	</dl>
 </body>
