--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -1,8 +1,8 @@
 <style>
 	.change-scheme-button {
-		position: absolute;
-		top: 0;
-		right: 0;
+		position: fixed;
+		top: 5px;
+		right: 5px;
 	}
 </style>
 <vwc-theme-switch class="change-scheme-button"></vwc-theme-switch>
