--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -1,10 +1,8 @@
 <style>
-	.change-scheme-component {
-		margin-bottom: 12px;
-		display: flex;
-		justify-content: flex-end;
+	.change-scheme-button {
+		position: fixed;
+		top: 5px;
+		right: 5px;
 	}
 </style>
-<div class="change-scheme-component">
-	<vwc-theme-switch></vwc-theme-switch>
-</div>
+<vwc-theme-switch class="change-scheme-button"></vwc-theme-switch>
