feat(button): stacked style flow support
add button stacked flow style to meet teams demand

Closes #1156

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+	<vwc-button stacked icon="home" icontrailing label="Hi"></vwc-button>
 	<api-viewer src="./custom-elements.json" section="demo" selected="vwc-button">
 		<template data-element="vwc-button" data-target="knob" data-attr="dir" data-type="source">
 			<select>
